[project]
name = "ecs-deployer-boto3"
# Changing the version automatically publishes to PyPI (see DEVELOPMENT.md)
version = "0.2.0"
description = "Deploy applications to AWS ECS using boto3 and pydantic"
readme = "README.md"
license = "MIT"
authors = [{ name = "Ilia Peterov", email = "ipeterov1@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "pydantic>=2.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/ipeterov/ecs-deployer-boto3"
Repository = "https://github.com/ipeterov/ecs-deployer-boto3"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "ecs_deployer_boto3/",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["ecs_deployer_boto3"]

[dependency-groups]
dev = [
    "mypy-boto3-ecs>=1.34",
    "pytest>=8.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
addopts = "--tb=short"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
lines-after-imports = 2
force-wrap-aliases = true
combine-as-imports = true
